--- a/public/index.html
+++ b/public/index.html
@@ -881,8 +881,7 @@
                 <p class="mb-4">En utilisant ce site, vous accepte les conditions suivantes :</p>
                 <ul class="list-disc pl-5 space-y-2">
                     <li>Le site Smart Insert est une plateforme de mise en relation entre chercheurs d'emploi et employeurs</li>
-                    <li>Les offres d'emploi sont publiées sous la responsabilité des recruteurs</li>
-                    <li>Smart Insert ne garantit pas l'authenticité des offres mais s'efforce de vérifier leur validité</li>
+                    <li>Les offres d'emploi sont publiées sous la responsabilité des employeurs</li>
                     <li>L'utilisation des données personnelles est régie par notre politique de confidentialité</li>
                     <li>Smart Insert se réserve le droit de modifier ces conditions à tout moment</li>
                 </ul>
@@ -900,7 +899,6 @@
                 <ul class="list-disc pl-5 space-y-2">
                     <li>Nous collectons uniquement les informations nécessaires à la mise en relation avec les employeurs</li>
                     <li>Vos données ne sont pas soldes à des tiers à des fins commerciales</li>
-                    <li>Les CV et informations personnelles sont accessibles uniquement aux recruteurs pour lesquels vous postulez</li>
                     <li>Vous pouvez à tout moment demander la suppression de vos données personnelles</li>
                     <li>Nous utilisons des technologies de cryptage pour protéger vos informations</li>
                 </ul>
@@ -2291,4 +2289,5 @@
         }
     </script>
 </body>
+
 </html>
